--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular": "^1.5.3",
+    "angular-route": "^1.5.3",
     "body-parser": "~1.13.2",
+    "bootstrap": "^3.3.6",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "jquery": "^2.2.2",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
